--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id "io.qameta.allure" version "2.10.0"
 }
 
 group 'ru.webprizma'
@@ -9,12 +10,31 @@ repositories {
     mavenCentral()
 }
 
+allure {
+    report {
+        version.set("2.18.1") //версия Allure Report (https://github.com/allure-framework/allure2)
+    }
+    adapter {
+        aspectjWeaver.set(true) // обработка аннотации @Step
+        frameworks {
+            junit5 {
+                adapterVersion.set("2.18.1") //версия Allure JUnit5 (https://github.com/allure-framework/allure-java)
+            }
+        }
+    }
+}
+
 dependencies {
     testImplementation (
             'org.junit.jupiter:junit-jupiter:5.8.2',
             'com.codeborne:selenide:6.6.5',
+            'io.qameta.allure:allure-selenide:2.18.1',
             'org.slf4j:slf4j-simple:1.8.0-beta4'
     )
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
 }
 
 test {
